grid changes to support qtip and partial columns rendering

--- a/config/locales/data_grid.en-US.yml
+++ b/config/locales/data_grid.en-US.yml
@@ -3,6 +3,7 @@ en-US:
     data_grid:
       more: More..
       loading: Loading...
+      loading_failed: Loading failed
       saving: Saving...
       row: row
       views:
