--- a/config/locales/data_grid.he-IL.yml
+++ b/config/locales/data_grid.he-IL.yml
@@ -3,6 +3,7 @@ he-IL:
     data_grid:
       more: עוד...
       loading: טעינה...
+      loading_failed: טעינה נכשלה
       saving: שמירה...
       row: שורה
       views:
